--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,7 +9,7 @@
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
     "react-router": "4.2.0",
-    "react-router-dom": "^6.3.0",
+    "react-router-dom": "4.2.2",
     "react-scripts": "1.1.4"
   },
   "scripts": {
